tests/fixtures/invalid/bytes_bitnot.py
# Cannot use bitwise NOT on Bytes
x: bytes = b"hello"
y: int = ~x
